gogs-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogs-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gogs
  template:
    metadata:
      labels:
        app: gogs
    spec:
      containers:
      - name: gogs
        image: 10.211.55.36:5000/gogs:latest
        ports:
        - containerPort: 3000
        - containerPort: 22
        volumeMounts:
        - name: gogs-repositories
          mountPath: /gogs-repositories
      volumes:
      - name: gogs-repositories
        persistentVolumeClaim:
          claimName: gogs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: gogs-service
spec:
  selector:
    app: gogs
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: ssh
      port: 22
      targetPort: 22
